# research-agent

./: .env.example  .gitignore  .opencode.json  .researcher_state.json  AGENTS.md  PROJECT_PLAN.md  README.md  martin.bat  martin_v1_4_7.py  opencode.local.md  pyproject.toml  requirements.txt  researcher.ps1
config/: local.yaml
docs/: architecture.md  bug_log.md  clean_machine_run_log.md  cli_ux.md  expected_behavior.md  hall_of_fame.md  legacy_import_report.md  logbook.md  martin_alignment.md  martin_operator_guide.md  opencode_migration_process.md  opencode_test_plan.md  plan_of_attack_piccilo.md  question_log.md  questions_log.md  setup_local.md  signoff.md  state_snapshot_ironbridge.md  supervisor.md  task_queue.md  tickets.md  uat_test_plan.md  ux_behaviors.md  ux_test_audit.md  verification.md  work_plan.md
researcher/: __init__.py  __main__.py  answer.py  chat_ui.py  cli.py  cloud_bridge.py  command_utils.py  config_loader.py  context_harvest.py  crypto_utils.py  dev_flow.py  file_utils.py  index.py  index_utils.py  ingester.py  librarian.py  librarian_client.py  llm_utils.py  local_llm.py  log_utils.py  logbook_utils.py  martin_behaviors.py  orchestrator.py  provenance.py  remote_transport.py  resource_registry.py  runner.py  sanitize.py  schemas.py  service.py  socket_server.py  socket_test_bridge.py  state_manager.py  supervisor.py  system_context.py  system_info.py  test_helpers.py  tool_ledger.py  tui_shell.py  worklog.py
scripts/: build_opencode.ps1  ingest_demo.py  install_martin.ps1  legacy_import.py  log_question.py  martin_service.ps1  run_tests.ps1  (+7 more)
(+41 files in other folders)
